1998-08-03  Samuel Tardieu  <sam@inf.enst.fr>

	* NEWS: Updated for heterogeneous support.

	* MANIFEST: Add Garlic/s-garloc.ad[bs] to the distribution.

	* Makefile.am: Remove isthrbio and associated files when doing a
	"make clean".

	* configure.in: Use -m to recompile isthrbio to avoid useless
	recompilations.
	Use ./isthrbio in the case where the user does not have "." in her
	PATH.
	Do not remove ./isthrbio to allow subsequent runs of configure
	without extra compilation.
	Reformat the comment for --enable-thread-blocking-io to make
	respect the GNU coding standards.
	Remove -gnatx from default flags since its meaning has been
	reversed.
	Use -gnatawe since -gnatwu is included with -gnatg.
	
1998-08-03  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in, configure: Create a new configuration option:
 	--with-sanity=dir. This allows to save partition pids in a given
 	directory. This option helps to control non-terminating partitions
 	when regression tests are running. It affects s-gaplsp.ads.in.

1998-07-27  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure, configure.in: Typo in configure.in (TCP.Non_Blocking
	-> Non_Blocking).

1998-07-26  Laurent Pautet  <pautet@scapin.enst.fr>

	* MANIFEST: Remove some 5*files because the thread-blocking-io
	mode does not depend on the system but on the gnat rts. Add
	isthrbio.adb which tests the thread-blocking-io mode.

	* configure.in, configure: Check whether gnat rts is thread block
 	io or not. This has to be done during configuration because
	Makefile will be modified accordingly (NOBLTCP*). The system
	dependent files will be updated during installation.

1998-06-16  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Include Garlic/linktest.adb into the distribution.

	* configure.in: Set linktest depending on the presence of
	--enable-debug.

1998-06-04  Laurent Pautet  <pautet@scapin.enst.fr>

	* MANIFEST: Remove s-rpcini.ad[bs].

1998-05-31  Samuel Tardieu  <sam@inf.enst.fr>
