@@ -6,4 +6,4 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 SUBDIRS = Dist Garlic
 ACLOCAL_AMFLAGS = -I support
 
-CLEANFILES = isthrbio${EXEEXT} *.o *.ali
+CLEANFILES = isthrbio${EXEEXT} *.o *.ali b_*.c
