@@ -147,36 +147,13 @@ AC_ARG_WITH(remsh,
 AC_SUBST(RSH)
 AC_MSG_RESULT($RSH)
 #
-# Filter list
+# Checking whether s-gtplsp.adb exists for this platform
 #
-AC_ARG_WITH(filters,
-[  --with-filters=list     Enumerate filter list (default=none+zip)],
-[
-  FILTERLIST="${withval}";
-],
-[
-  FILTERLIST="zip"
-])
-AC_MSG_CHECKING([default filters])
-[
-if test -d Garlic; then
-  :
-else
-  mkdir Garlic
-fi
-FILTERFILE=Garlic/Makefile.fil;
-rm -f ${FILTERFILE}
-for F in ${FILTERLIST}; do
-  if test -f ${srcdir}/Garlic/Makefile.${F}; then
-    cat ${srcdir}/Garlic/Makefile.${F} >>${FILTERFILE}
-    echo "" >>${FILTERFILE}
-  else
-    ]AC_MSG_ERROR([unknown filter ${F}])[
-  fi;
-done
-]
-AC_MSG_RESULT([${FILTERLIST}])
-AC_SUBST_FILE(FILTERFILE)
+case ${PLATFORM_SPECIFIC} in
+  w) TCP_PLATFORM_SOURCE=s-gtplsp.adb;;
+  *) TCP_PLATFORM_SOURCE=s-gtplsp.ads;;
+esac
+AC_SUBST(TCP_PLATFORM_SOURCE)
 #
 # Protocol list
 #
@@ -234,8 +211,11 @@ if test "$TCP_INCLUDED" = ""; then
    PROTOCOLSOBJECTS="${PROTOCOLSOBJECTS} \$(NOBLTCPOBJECTS)"
   ],
   [
-    AC_MSG_CHECKING([for thread-blocking I/O])
-    gnatmake -m -q -a isthrbio.adb -I$srcdir/Garlic;
+    AC_MSG_CHECKING([for thread-blocking I/O (long)])
+    gcc -c -gnatg $srcdir/Garlic/${TCP_PLATFORM_SOURCE} -I$srcdir/Garlic;
+    gcc -c -gnatg $srcdir/Garlic/s-garlic.ads -I$srcdir/Garlic;
+    gcc -c -gnatg $srcdir/Garlic/s-garthi.ads -I$srcdir/Garlic;
+    gnatmake -q -m isthrbio.adb -I$srcdir/Garlic;
     if ./isthrbio${EXEEXT} $srcdir/Garlic/s-gatcop.ads; then
 	AC_MSG_RESULT([no])
 	PROTOCOLSSOURCES="${PROTOCOLSSOURCES} \$(NOBLTCPSOURCES)"
@@ -249,13 +229,36 @@ AC_SUBST(PROTOCOLSSOURCES)
 AC_SUBST(PROTOCOLSOBJECTS)
 AC_SUBST(TCP_INCLUDED)
 #
-# Checking whether s-gtplsp.adb exists for this platform
+# Filter list
 #
-case ${PLATFORM_SPECIFIC} in
-  w) TCP_PLATFORM_SOURCE=s-gtplsp.adb;;
-  *) TCP_PLATFORM_SOURCE=s-gtplsp.ads;;
-esac
-AC_SUBST(TCP_PLATFORM_SOURCE)
+AC_ARG_WITH(filters,
+[  --with-filters=list     Enumerate filter list (default=none+zip)],
+[
+  FILTERLIST="${withval}";
+],
+[
+  FILTERLIST="zip"
+])
+AC_MSG_CHECKING([default filters])
+[
+if test -d Garlic; then
+  :
+else
+  mkdir Garlic
+fi
+FILTERFILE=Garlic/Makefile.fil;
+rm -f ${FILTERFILE}
+for F in ${FILTERLIST}; do
+  if test -f ${srcdir}/Garlic/Makefile.${F}; then
+    cat ${srcdir}/Garlic/Makefile.${F} >>${FILTERFILE}
+    echo "" >>${FILTERFILE}
+  else
+    ]AC_MSG_ERROR([unknown filter ${F}])[
+  fi;
+done
+]
+AC_MSG_RESULT([${FILTERLIST}])
+AC_SUBST_FILE(FILTERFILE)
 #
 # Extra libraries
 #
